<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_text">Spotify Streamer</string>
    <string name="scores_text">scores app</string>
    <string name="library_text">library app</string>
    <string name="build_it_bigger_text">build it bigger</string>
    <string name="xyz_reader_text">xyz reader</string>
    <string name="capstone_text">capstone: my own app</string>
</resources>
